--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ PyNaCl==1.1.2
 pyRFC3339==1.0
 python-apt==1.6.5+ubuntu0.2
 python-debian==0.1.32
+python-decouple==3.3
 pytz==2018.3
 pyxdg==0.25
 PyYAML==3.12
